refactor - corrige nomenclaturas, centraliza exceções e otimiza streams e logs